<resources>
    <string name="app_name">Homework2</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="notebook">NoteBook</string>
    <string name="call">Call</string>
    <string name="profile">Profile</string>
    <string name="a_contact">A</string>
    <string name="admistrator_contact">Admistrator</string>
    <string name="admin_polen_contact">Admin Polen</string>
    <string name="admin_pisal_contact">Admin Pisal</string>
    <string name="b_contact">B</string>
    <string name="best_friend_contact">Best Friend</string>
    <string name="c_contact">C</string>
    <string name="cristiano_ronaldo_contact">Cristiano Ronaldo</string>
    <string name="captain_contact">Captain</string>
    <string name="l_contact">L</string>
    <string name="leo_messi_contact">Leo Messi</string>
    <string name="leonado_contact">Leonado</string>
    <string name="m_contact">M</string>
    <string name="my_love_contact">My Love</string>
    <string name="mommy_contact">Mommy</string>
    <string name="s_contact">S</string>
    <string name="setect_institute_contact">SETECT institute</string>
    <string name="enter_phone_number_call">Enter phone number</string>
    <string name="call_call">call now</string>
    <string name="add_note_note">Add Note</string>
    <string name="title_note_input">Title</string>
    <string name="description_note_input">Description</string>
    <string name="log_in_note_input">Save</string>
    <string name="cancel_note_input">Cancel</string>
    <string name="information_p_layout">Information</string>
    <string name="display_name_p_layout">Display Name</string>
    <string name="name_p_layout">name</string>
    <string name="gender_p_layout">Gender</string>
    <string name="female_p_layout">Female</string>
    <string name="male_p_layout">Male</string>
    <string name="birthday_p_layout">Birthday</string>
    <string name="select_date_p_layout">Select Date</string>
    <string name="_2_20_2019_p_layout">2/20/2019</string>
    <string name="language_p_layout">Language</string>
    <string name="save_p_layout">save</string>
    <string name="name_p_detail">Name :</string>
    <string name="doctor_strange_p_detail">Doctor Strange</string>
    <string name="java_p_detail">Java</string>
    <string name="_1_1_2090_p_detail">1-1-2090</string>
    <string name="male_p_detail">Male</string>
    <string name="language_p_detail">Language :</string>
    <string name="birthday_p_detail">Birthday :</string>
    <string name="gender_p_detail">Gender :</string>
    <string-array name="lang">
        <item>Ios</item>
        <item>Android</item>
    </string-array>
    <string-array name="contact">
        <item>A</item>
        <item>B</item>
    </string-array>
</resources>
