<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/information_p_layout"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/frijole"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/display_name_p_layout"/>
    <EditText
        android:id="@+id/infoName"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_p_layout"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/gender_p_layout"/>
    <RadioGroup
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_gender_group">
        <RadioButton
            android:id="@+id/profile_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/female_p_layout"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/profile_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/male_p_layout"/>
    </RadioGroup>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/birthday_p_layout"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/profile_selectdate"
            android:text="@string/select_date_p_layout"/>
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/profile_textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_20_2019_p_layout"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/language_p_layout"/>
    <Spinner
        android:id="@+id/profile_lang"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:entries="@array/lang"/>
    <Button
        android:id="@+id/profile_btn_save"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_p_layout"/>
</LinearLayout>