<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailActvity">
    <ImageView
        android:id="@+id/image_view_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/doctor"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/Name_detail"
        android:layout_below="@id/image_view_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_p_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/Name_detail_user"
        android:layout_below="@id/image_view_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_strange_p_detail"
        android:layout_toEndOf="@id/Name_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/gender_detail"
        android:layout_below="@id/Name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_p_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/bd_detail"
        android:layout_below="@id/gender_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_p_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/lang_detail"
        android:layout_below="@id/bd_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_p_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/gender_detail_user"
        android:layout_below="@id/Name_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male_p_detail"
        android:layout_toEndOf="@id/Name_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/bd_detail_user"
        android:layout_below="@id/gender_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_1_2090_p_detail"
        android:layout_toEndOf="@id/Name_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/lang_detail_user"
        android:layout_below="@id/bd_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_p_detail"
        android:layout_toEndOf="@id/Name_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>
</RelativeLayout>