<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/frijole"
        android:text="@string/add_note_note"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_below="@id/textView1"
        android:id="@+id/linear_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <EditText
            android:layout_weight="5"
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/title_note_input" >
            <requestFocus />
        </EditText>

        <EditText
            android:layout_weight="90"
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="15sp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:hint="@string/description_note_input" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="2"
            android:layout_weight="5">
            <Button
                android:id="@+id/noteInput_cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cancel_note_input" />
            <Button
                android:id="@+id/noteInput_add"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/log_in_note_input" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
