<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2">
        <FrameLayout
            android:id="@+id/main_btn_gal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_main_button">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/gallery"
                android:background="@drawable/circle_purple"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/gallery"
                android:textSize="20dp"
                android:textColor="@color/colorPurple"
                android:fontFamily="@font/freckle_face"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/main_btn_con"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_main_button">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_pink"
                android:src="@drawable/contact"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:textColor="@color/colorPink"
                android:fontFamily="@font/freckle_face"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/main_btn_note"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_main_button">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_green"
                android:src="@drawable/note"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/notebook"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:textColor="@color/colorGreen"
                android:fontFamily="@font/freckle_face"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/main_btn_call"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_main_button">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_orange"
                android:src="@drawable/phone"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:textColor="@color/colorOrange"
                android:fontFamily="@font/freckle_face"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/main_btn_pro"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_main_button">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/circle_blue"
                android:src="@drawable/profile"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/freckle_face"/>
        </FrameLayout>
    </GridLayout>
</ScrollView>